--- a/src/Components/Posts/Posts.css
+++ b/src/Components/Posts/Posts.css
@@ -2,7 +2,7 @@ body {
   font-family: Helvetica, Arial, freesans, sans-serif;
 }
 .post {
-  width: 450px;
+  width: 300px;
   padding: 16px;
   text-align: left;
   border: 1px solid #eee;
@@ -12,10 +12,10 @@ body {
   cursor: pointer;
 }
 
-.post:hover,
+/* .post:hover,
 .post:active {
-  background-color: #c0ddf5;
-}
+  /* background-color: #c0ddf5;
+} */
 .Posts {
   display: flex;
   flex-flow: row wrap;
@@ -24,7 +24,7 @@ body {
   margin: auto;
 }
 .title {
-  font-size: 20px;
+  font-size: 16px;
   margin: 10px 0px 10px 0px;
   color: #222222;
   line-height: 20px;
@@ -40,6 +40,6 @@ body {
 
 .description {
   color: #5a5a5a;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 18px;
 }
